# 2048

./: .gitignore  game.py  helpers.py  pyproject.toml  readme.md
src/: __main__.py
